<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".PreferencesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:textSize="24sp"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider" />


    <TextView
        android:id="@+id/tv_SeekBarValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:text="Radius: 0m" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:max="1000"/>

    <TextView
        android:id="@+id/tv_BinTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/bin_types" />

    <CheckBox
        android:id="@+id/cb_WasteBasket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waste_basket" />

    <CheckBox
        android:id="@+id/cb_RecyclingBin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recycling_bin" />

    <CheckBox
        android:id="@+id/cb_VendingMachine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vending Machine" />

    <Button
        android:id="@+id/bt_SavePreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/save_preferences" />


</LinearLayout>